image and description
got rid of pasta, as we dont have any

--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Black_n_bleu_burger_500x285.png" alt="">
+                  <img src="images/Fried-Chicken-Sandwiches_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
                     Chicken Sandwich
                   </h5>
                   <p>
-                    A golden-brown crust, seasoned chicken filet, served between toasted buns, and pickles
+                    A golden-brown crust, seasoned chicken filet, served between toasted buns, pickles, coleslaw, and a slice of american cheese
                   </p>
                   <div class="options">
                     <h6>
@@ -380,14 +380,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    French Fries
+                    Cajun Fries
                   </h5>
                   <p>
                     Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      $4.49
                     </h6>
                    
                   </div>
@@ -443,11 +443,11 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all pasta">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="Image">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
