--- a/menu.html
+++ b/menu.html
@@ -120,7 +120,6 @@
          <li data-filter=".burger">Burger</li>
          <li data-filter=".sides">Sides</li>
         <li data-filter=".Steaks">Steaks</li>
-       <li data-filter=".pasta">Pasta</li>
         <li data-filter=".salad">Salad</li>        
         <li data-filter=".dessert">Dessert</li>
         <li data-filter=".drink">Drinks</li>
@@ -168,8 +167,6 @@
                     <h6>
                       $6.99
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -214,8 +211,6 @@
                     <h6>
                       $4.49
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -262,8 +257,6 @@
                     <h6>
                       $7.99 
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -309,8 +302,6 @@
                     <h6>
                       $7.49
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -356,8 +347,6 @@
                     <h6>
                       $10.49
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -406,8 +395,6 @@
                     <h6>
                       $9.99
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -475,8 +462,6 @@
                     <h6>
                       $11.49
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -525,8 +510,6 @@
                     <h6>
                       $13.99
                     </h6>
-                    <a href="">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
                             <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
@@ -587,13 +570,11 @@
                     Chicken Sandwich
                   </h5>
                   <p>
-                    a golden-brown crust, seasoned chicken filet, served between toasted buns, and pickles
+                    A golden-brown crust, seasoned chicken filet, served between toasted buns, pickles, coleslaw, and a slice of american cheese
                   <div class="options">
                     <h6>
                       $5.99 
                     </h6>
-                    <a href="#">
-                      </svg>
                     </a>
                   </div>
                 </div>
@@ -617,10 +598,6 @@
                     <h6>
                       $8.49
                     </h6>
-                    <a href="#">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <!-- SVG Path for your icon -->
-                      </svg>
                     </a>
                   </div>
                 </div>
@@ -643,9 +620,6 @@
                     <h6>
                       $4.49 <!-- Replace with the actual price -->
                     </h6>
-                    <a href="#">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <!-- SVG Path for your icon -->
                       </svg>
                     </a>
                   </div>
@@ -671,8 +645,6 @@
                     <h6>
                       $4.49
                     </h6>
-                    <a href="">
-                    </a>
                   </div>
                 </div>
               </div>
@@ -715,7 +687,7 @@
                     Ribeye
                   </h5>
                   <p>
-                    Grilled and blackened ribeye on an onion bun, boasting juicy marbling, mouthwatering tenderness, and robust, beefy flavor—cooked just the way you like it.
+                    Grilled and blackened ribeye, boasting juicy marbling, mouthwatering tenderness, and robust, beefy flavor—cooked just the way you like it.
                     <p>  
                     </p>   
                   </p>   
@@ -744,10 +716,6 @@
                     <h6>
                       $8.49 <!-- Replace with the actual price -->
                     </h6>
-                    <a href="#">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <!-- SVG Path for your icon -->
-                      </svg>
                     </a>
                   </div>
                 </div>
@@ -909,10 +877,6 @@
                             <h6>
                                 $4.99 <!-- Replace with the actual price -->
                             </h6>
-                            <a href="#">
-                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                                    <!-- SVG Path for your icon -->
-                                </svg>
                             </a>
                         </div>
                     </div>
@@ -936,10 +900,6 @@
                     <h6>
                       $2.99 <!-- Replace with the actual price -->
                     </h6>
-                    <a href="#">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <!-- SVG Path for your icon -->
-                      </svg>
                     </a>
                   </div>
                 </div>
@@ -963,10 +923,6 @@
                     <h6>
                       $2.99 <!-- Replace with the actual price -->
                     </h6>
-                    <a href="#">
-                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                        <!-- SVG Path for your icon -->
-                      </svg>
                     </a>
                   </div>
                 </div>
