--- a/team.html
+++ b/team.html
@@ -121,8 +121,11 @@
         <!-- Team Member 2 -->
         <div class="col-md-4">
           <div class="team_member_box">
-            <h4></h4>
-            <p></p>
+            <h4>Colten Abel</h4>
+            <p>Job title
+              <br>
+              About Me
+            </p>
             <!-- Add additional details or image if needed -->
           </div>
         </div>
