--- a/team.html
+++ b/team.html
@@ -102,6 +102,11 @@
   </header>
     <!-- end header section -->
 
+    <div style="height: 20px;"></div>
+    <div style="height: 20px;"></div>
+    <div style="height: 20px;"></div>
+    <div style="height: 20px;"></div>
+    <div style="height: 20px;"></div>
 
 
 
