index and contact
did a little work conner deadlines are a thing

--- a/index.html
+++ b/index.html
@@ -353,14 +353,13 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Chicken Alfredo1161197982-612x612_500x286.jpg" alt="">
+                  <img src="images/Tomahawk_Steak_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
-                    Chicken Alfredo
-                  </h5>
+                Tomahawk                 
+ </h5>
                   <p>
-                    Grilled chicken breast tossed with homemade Alfredo sauce over fettuccini pasta. Topped with
-                    Parmesan cheese
+                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, cooked to your preference.
                   </p>
                   <div class="options">
                     <h6>
@@ -519,8 +518,9 @@
               </h2>
             </div>
             <p>
-              The Game Day Grill launched its website to customers in 2023 and is ran by Amr Daraghmeh, Conner Snyder,
-              and Colton Abel.
+              TGame Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
+
+
             </p>
             <a href="about.html">
               Read More
