--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   </span> Get two classic burgers ( beef, chicken, or veggie) with a side of your choice and drinks
                 </h6>
                 </h6>
-                <a href="menu.html">
+                <a href="order_online.html">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029"
                     style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -240,7 +240,7 @@
                 </h6>
 
                 </h6>
-                <a href="">
+                <a href="order_online.html">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029"
                     style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
