--- a/menu.html
+++ b/menu.html
@@ -726,7 +726,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/thewolrdbegins.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -798,7 +798,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/delicious-funnel-cake-dark-background-with-empty-space-for-text-photo-transformed.jpeg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -842,7 +842,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/strawberrycheesecake-transformed_500x286.jpeg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
