--- a/menu.html
+++ b/menu.html
@@ -289,7 +289,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/pretzelbites_JPEG_500x286.webp" alt="">
+                  <img src="images/sourdough-pretzel-bites-1_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -887,7 +887,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/pretzelbites_JPEG_500x286.webp" alt="Another Appetizer Image">
+                  <img src="images/sourdough-pretzel-bites-1_500x286.jpg" alt="Another Appetizer Image">
                 </div>
                 <div class="detail-box">
                   <h5>
