images are done

--- a/menu.html
+++ b/menu.html
@@ -887,7 +887,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/sourdough-pretzel-bites-1_500x286.jpg" alt="Another Appetizer Image">
+                  <img src="images/Iced_tea(1).PNG" alt="Another Appetizer Image">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -910,7 +910,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/pretzelbites_JPEG_500x286.webp" alt="Another Appetizer Image">
+                  <img src="images/lemonade(1)_watermark removed.jfif" alt="Another Appetizer Image">
                 </div>
                 <div class="detail-box">
                   <h5>
