--- a/menu.html
+++ b/menu.html
@@ -138,7 +138,7 @@
                    Loaded Potato Skins
                   </h5>
                   <p>
-                    Loaded with Cheddar and Mozzarella cheeses, sprinkled with bacon bits, and sour cream on the side
+                    Cheddar, Mozzarella, bacon, with sour cream on the side.
                   </p>
                   <div class="options">
                     <h6>
@@ -165,7 +165,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $6.99
+                      $6.99 - $12.89
                     </h6>
                         <g>
                           <g>
@@ -341,7 +341,7 @@
                   Chips and Guacamole
                   </h5>
                   <p>
-                    golden-fried tortilla chips,seasoned and salted, served with our house-made guacamole, a creamy blend of ripe avocados, diced tomatoes, onions, cilantro, and a fresh squeezed lime 
+                    Crispy tortilla chips with house-made guacamole—a creamy blend of avocados, tomatoes, onions, cilantro, and lime.
                   </p>
                   <div class="options">
                     <h6>
@@ -387,7 +387,7 @@
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    lean ground beef cooked to order, bacon-trimmed, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
+                    lean ground beef cooked to order, bacon, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
                     <p>  
                     </p>   
                   </p>   
