--- a/menu.html
+++ b/menu.html
@@ -548,7 +548,7 @@
                     Pretzel Burger
                   </h5>
                   <p>
-                    a patty between a soft pretzel bun with caramelized onions, lettuce, with a slice of a tomato with nacho cheese sauce and a slice of provolone
+                    Patty on a pretzel bun with caramelized onions, lettuce, tomato, nacho cheese, and provolone.
                   </p>
                   <div class="options">
                     <h6>
@@ -593,8 +593,8 @@
                     Mac & cheese
                   </h5>
                   <p>
-                    elbow macaroni with velvety cheese topped with pulled pork
-                  <div class="options">
+                    Tender elbow macaroni enveloped in a luscious, velvety cheese sauce, crowned with succulent pulled pork for a decadent and satisfying fusion of comfort and indulgence.
+                    <div class="options">
                     <h6>
                       $8.49
                     </h6>
@@ -639,7 +639,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    chopped raw cabbage, crisp carrots, and flavorful onions, all blended with our rich mayonnaise dressing.
+                    A generous medley of finely chopped raw cabbage, crunchy carrots, and savory onions, artfully combined and coated with our indulgently rich mayonnaise dressing for a delightfully expansive burst of flavors .
                   </p>
                   <div class="options">
                     <h6>
