--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <li class="active" data-filter="*">All</li>
         <li data-filter=".burger">Burger</li>
         <li data-filter=".salad">Salad</li>
-        <li data-filter=".pasta">Pasta</li>
+        <li data-filter=".Steaks">Steaks</li>
         <li data-filter=".sides">Sides</li>
       </ul>
 
@@ -349,7 +349,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all sides">
+          <div class="col-sm-6 col-lg-4 all steaks">
             <div class="box">
               <div>
                 <div class="">
