--- a/menu.html
+++ b/menu.html
@@ -615,8 +615,8 @@
                     Cajun Fries 
                   </h5>
                   <p>
-                    A sliced russet potato, fried in peanut oil to a crisp outside, with a spicy garlic seasoning 
-                  <div class="options">
+                    Savor the perfection of thinly sliced russet potatoes, fried to a crisp in premium peanut oil, and elevated with a tantalizing spicy garlic seasoning for a flavor-packed delight that will leave you wanting more.
+                    <div class="options">
                     <h6>
                       $4.49 <!-- Replace with the actual price -->
                     </h6>
@@ -712,9 +712,12 @@
                     NYC Strip Steak
                   </h5>
                   <p>
-                  <div class="options">
+                    a prime cut prized for tenderness and robust flavor. Each bite is a succulent experience, embodying the essence of New York's culinary excellence.                    <p>
+                </p>
+              </p>
+                 <div class="options">
                     <h6>
-                      $8.49 <!-- Replace with the actual price -->
+                      $50.49 <!-- Replace with the actual price -->
                     </h6>
                     </a>
                   </div>
