--- a/menu.html
+++ b/menu.html
@@ -726,7 +726,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/thewolrdbegins.jpg" alt="">
+                  <img src="images/pngtree-chicken-caesar-salad-on-a-stylish-dark-background-image_13788603 (1).png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
