--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                   </h5>
                   <p>
                     A golden-brown crust, seasoned chicken filet, served between toasted buns, pickles, coleslaw, and a slice of american cheese
+
                   </p>
                   <div class="options">
                     <h6>
@@ -312,8 +313,7 @@
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, grilled
-                    onions on a white bun 
+                    lean ground beef cooked to order, bacon, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
                   </p>
                   <div class="options">
                     <h6>
@@ -336,8 +336,7 @@
                     Mediterranean Salad
                   </h5>
                   <p>
-                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red
-                    onions, pepperoncini, and topped with Feta cheese
+                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
                   </p>
                   <div class="options">
                     <h6>
