--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
@@ -79,18 +79,19 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="book.html">Book Table</a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                  More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
-                  <a class="dropdown-item" href="team.html">Team</a>
-                  <a class="dropdown-item" href="contact.html">Contact</a>
-                  <!-- Add more items here as needed -->
-                </div>
-              </li>
-            </ul>
+             <!-- More Option with Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMore" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          More
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
+          <a class="dropdown-item" href="team.html">Team</a>
+          <a class="dropdown-item" href="contact.html">Contact</a>
+          <!-- Add more items here as needed -->
+        </div>
+      </li>
+    </ul>
           <div class="user_option">
             <a href="order_online.html" class="order_online">
               Order Online
@@ -100,53 +101,37 @@
       </nav>
     </div>
   </header>
-    <!-- end header section -->
+  </div>
+  <section>
+  <div class="filters-content">
+    <div class="row grid">
+      <div class="col-sm-6 col-lg-4 all appetizers">
+        <div class="box">
+          <div>
+            <div class="images">
+              <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+               Loaded Potato Skins
+              </h5>
+              <p>
+                Cheddar, Mozzarella, bacon, with sour cream on the side.
+              </p>
+              <div class="options">
+                <h6>
+                  $10.49
+                </h6>
 
-    <div style="height: 20px;"></div>
-    <div style="height: 20px;"></div>
-    <div style="height: 20px;"></div>
-    <div style="height: 20px;"></div>
-    <div style="height: 20px;"></div>
-
-
-    <div style="height: 20px;"></div>
-    <div style="height: 20px;"></div>
-
-    <!-- Replace the existing tam.html section with this code -->
-<section class="team_section">
-    <div class="container">
-      <div class="row">
-        <!-- Team Member 1 -->
-        <div class="col-md-4">
-          <div class="team_member_box">
-            <h4>Amr Daraghmeh</h4>
-            <p>Team Manger</p>
-            <!-- Add additional details or image if needed -->
+              </div>
+            </div>
           </div>
         </div>
-        <div style="height: 20px;"></div>
-        <div style="height: 20px;"></div>
-        <div style="height: 20px;"></div>
-
- 
-  </section>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
-  <div style="height: 20px;"></div>
- <!-- footer section -->
-  
- <footer class="footer_section">
+      </div>
+</section>
+        
+  <!-- footer section -->
+  <footer class="footer_section">
     <div class="container">
       <div class="row">
         <div class="col-md-4 footer-col">
@@ -219,30 +204,26 @@
       </div>
     </div>
   </footer>
-  <!-- footer section -->
-
-  <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <!-- isotope js -->
-  <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
-  <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
-  <!-- custom js -->
-  <script src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
-
-</body>
-
-</html>
+   <!-- jQery -->
+   <script src="js/jquery-3.4.1.min.js"></script>
+   <!-- popper js -->
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+   </script>
+   <!-- bootstrap js -->
+   <script src="js/bootstrap.js"></script>
+   <!-- owl slider -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+   </script>
+   <!-- isotope js -->
+   <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+   <!-- nice select -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+   <!-- custom js -->
+   <script src="js/custom.js"></script>
+   <!-- Google Map -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+   </script>
+   <!-- End Google Map -->
+ 
+ </body>
+ 
