--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
@@ -102,34 +102,89 @@
     </div>
   </header>
   </div>
-  <section>
-  <div class="filters-content">
-    <div class="row grid">
-      <div class="col-sm-6 col-lg-4 all appetizers">
-        <div class="box">
-          <div>
-            <div class="images">
-              <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-               Loaded Potato Skins
-              </h5>
-              <p>
-                Cheddar, Mozzarella, bacon, with sour cream on the side.
-              </p>
-              <div class="options">
-                <h6>
-                  $10.49
-                </h6>
+<!--this is seat hjere to know wher ei am at -->
+<section class="food_section layout_padding">
+  <div class="container">
+    <div class="heading_container heading_center">
+      <h2>
+        Our Team
+      </h2>
+    </div>
+      <div class="row grid">
+        <div class="col-sm-6 col-lg-4 all appetizers">
+          <div class="box">
+            <div>
+              <div class="images">
+                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                 Loaded Potato Skins
+                </h5>
+                <p>
+                  Cheddar, Mozzarella, bacon, with sour cream on the side.
+                </p>
+                <div class="options">
+                  <h6>
+                    $10.49
+                  </h6>
 
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-</section>
-        
+
+        <div class="col-sm-6 col-lg-4 all appetizers">
+          <div class="box">
+            <div>
+              <div class="images">
+                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                 Loaded Potato Skins
+                </h5>
+                <p>
+                  Cheddar, Mozzarella, bacon, with sour cream on the side.
+                </p>
+                <div class="options">
+                  <h6>
+                    $10.49
+                  </h6>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4 all appetizers">
+          <div class="box">
+            <div>
+              <div class="images">
+                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                 Loaded Potato Skins
+                </h5>
+                <p>
+                  Cheddar, Mozzarella, bacon, with sour cream on the side.
+                </p>
+                <div class="options">
+                  <h6>
+                    $10.49
+                  </h6>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
   <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
