the teams page is on top
the theahat t

--- a/team.html
+++ b/team.html
@@ -19,7 +19,8 @@
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
-
+<!--for the theams page only -->
+<link rel="stylesheet" type="text/css" href="css/styleforteams.css"
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -159,7 +160,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-lg-4 all appetizers">
+        <div class="col-sm-6 col-lg-4 all appetizers text-center">
           <div class="box">
             <div>
               <div class="images">
@@ -167,7 +168,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                 Loaded Potato Skins
+                  Loaded Potato Skins
                 </h5>
                 <p>
                   Cheddar, Mozzarella, bacon, with sour cream on the side.
@@ -176,12 +177,12 @@
                   <h6>
                     $10.49
                   </h6>
-
                 </div>
               </div>
             </div>
           </div>
         </div>
+        
 
       </section>
 
