--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <img src="images/o2.jpg" alt="">
               </div>
               <div class="detail-box">
-                <h5>
-                  Grumbing Group
-                </h5>
+                <h4>
+                  Grumbling Group
+                </h4>
                 <h6>
                   <span> $44.99
                     <h6>
@@ -336,7 +336,7 @@
                     Mediterranean Salad
                   </h5>
                   <p>
-                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
+                    Chopped romaine tossed with vinaigrette dressing, black olives, diced tomatoes, red onions, and topped with Feta cheese
                   </p>
                   <div class="options">
                     <h6>
@@ -348,17 +348,18 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all steaks">
+          <div class="col-sm-6 col-lg-4 all Steaks">
             <div class="box">
               <div>
                 <div class="">
                   <img src="images/Tomahawk_Steak_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
+                  <h5>
                 Tomahawk                 
- </h5>
+                  </h5>
                   <p>
-                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, cooked to your preference.
+                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, seasoned perfectly, cooked to your preference.
                   </p>
                   <div class="options">
                     <h6>
@@ -381,7 +382,7 @@
                     Cajun Fries
                   </h5>
                   <p>
-                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
+                    Savor the perfection of thinly sliced russet potatoes, fried to a crisp in premium peanut oil, and elevated with a tantalizing spicy garlic seasoning for a flavor-packed delight that will leave you wanting more.
                   </p>
                   <div class="options">
                     <h6>
@@ -474,7 +475,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    Indulge in the satisfying medley of chooped raw cabbage, crisp carrots, and flavorful onions, all blended with our rich mayonnaise dressing.
+                    A satisfying medley of chopped raw cabbage, crisp carrots, and flavorful onions, blended with our rich mayonnaise dressing
                   </p>
                   <div class="options">
                     <h6>
