--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,10 @@
 </head>
 
 <body class="sub_page">
-
+  <div class="hero_area">
+    <div class="bg-box">
+      <img src="images/hero-bg.jpg" alt="">
+    </div>
   <!-- header section starts -->
   <header class="header_section">
     <div class="container">
@@ -138,7 +141,7 @@
                    Loaded Potato Skins
                   </h5>
                   <p>
-                    Cheddar, Mozzarella, bacon, with sour cream on the side.
+                    A baked potato loaded with cheddar, bacon, topped with sour cream, and scallions
                   </p>
                   <div class="options">
                     <h6>
@@ -548,7 +551,7 @@
                     Pretzel Burger
                   </h5>
                   <p>
-                    Patty on a pretzel bun with caramelized onions, lettuce, tomato, nacho cheese, and provolone.
+                    A beef Patty on a pretzel bun with caramelized onions, lettuce, tomato, and provolone with our specialty sauce.
                   </p>
                   <div class="options">
                     <h6>
@@ -736,7 +739,7 @@
                     Chicken Salad
                   </h5>
                   <p>
-                    Garden greens, tomatoes, sliced cucumbers, and grilled chicken blended together with a homemade dressing
+                    garden greens, grape tomatoes, lightly sliced provolone, sliced cucumbers, and seasoned grilled chicken blended together with a homemade dressing
                   </p>
                   <div class="options">
                     <h6>
@@ -760,7 +763,7 @@
                   </h5>
                   <p>
                     Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and
-                    black olives. Sour cream and salsa on the side. Choice of:
+                    black olives. Sour cream on the side. Choice of:
                     Chicken, Ground Beef
                   </p>
                   <div class="options">
@@ -897,7 +900,7 @@
                     Ice Tea
                   </h5>
                   <p>
-                    
+                    Tea that has a perfect mix between robust flavor and cooled refreshment
                   </p>
                   <div class="options">
                     <h6>
@@ -920,7 +923,7 @@
                     Lemonade
                   </h5>
                   <p>
-                    
+                    A perfect blend of lemons and sweetness to ensure a cool refreshing drink
                   </p>
                   <div class="options">
                     <h6>
