--- a/book.html
+++ b/book.html
@@ -130,6 +130,9 @@
                     How many persons?
                   </option>
                   <option value="">
+                    1
+                  </option>
+                  <option value="">
                     2
                   </option>
                   <option value="">
