--- a/team.html
+++ b/team.html
@@ -52,6 +52,13 @@
 
 <body class="sub_page">
 
+ <!-- header section starts -->
+
+ <body class="sub_page">
+  <div class="hero_area">
+    <div class="bg-box">
+      <img src="images/hero-bg.jpg" alt="">
+    </div>
   <!-- header section starts -->
   <header class="header_section">
     <div class="container">
@@ -102,6 +109,7 @@
       </nav>
     </div>
   </header>
+    <!-- end header section -->
   </div>
 <!--this is seat hjere to know wher ei am at -->
 <section class="food_section layout_padding">
@@ -116,14 +124,14 @@
           <div class="box">
             <div>
               <div class="images">
-                <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
+                <img src="images/_MG_1839.CR3" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                 Loaded Potato Skins
+Amr Daraghmeh
                 </h5>
                 <p>
-                  Cheddar, Mozzarella, bacon, with sour cream on the side.
+Team manger 
                 </p>
                 <div class="options">
                   <h6>
@@ -143,11 +151,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                 Loaded Potato Skins
+                 colton
                 </h5>
                 <p>
-                  Cheddar, Mozzarella, bacon, with sour cream on the side.
-                </p>
+sjhqb                </p>
                 <div class="options">
                   <h6>
                   </h6>
@@ -166,10 +173,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Loaded Potato Skins
+                  Amr Daraghmeh
                 </h5>
                 <p>
-                  Cheddar, Mozzarella, bacon, with sour cream on the side.
+                  Develeber 
                 </p>
                 <div class="options">
                   <h6>
