--- a/book.html
+++ b/book.html
@@ -50,7 +50,10 @@
 </head>
 
 <body class="sub_page">
-
+  <div class="hero_area">
+    <div class="bg-box">
+      <img src="images/hero-bg.jpg" alt="">
+    </div>
   <!-- header section starts -->
   <header class="header_section">
     <div class="container">
