i have just added the new page and i will be working with  it tomorrow

--- a/menu.html
+++ b/menu.html
@@ -91,6 +91,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
+          <a class="dropdown-item" href="special events.html">events</a>
           <!-- Add more items here as needed -->
         </div>
       </li>
