--- a/team.html
+++ b/team.html
@@ -96,6 +96,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
+          <a class="dropdown-item" href="special events.html">events</a>
           <!-- Add more items here as needed -->
         </div>
       </li>
@@ -124,7 +125,7 @@
           <div class="box">
             <div>
               <div class="images">
-                <img src="images/_MG_1839.CR3" alt="">
+                <img src="images/" alt="">
               </div>
               <div class="detail-box">
                 <h5>
